--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <div class="btn-group">
         <button id="start-btn" class="btn secondary">Start Tracker</button>
         <button id="stop-btn" class="btn secondary" disabled>Stop Tracker</button>
+        <button id="resume-btn" class="btn secondary" disabled>Resume</button>
         <button id="reset-btn" class="btn secondary" disabled>Reset</button>
+        <button id="end-btn" class="btn secondary" disabled>End</button> <!-- End button added -->
       </div>
       <p id="status" class="status">Status: Not Tracking</p>
 
