--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 
     <section class="history-section">
-      <h2>Historical Uptime Tracking</h2>
+      <h2>Historical Uptime Data</h2>
       <div class="history-controls">
         <button id="last-24hrs" class="btn secondary">Last 24 Hours</button>
         <button id="last-7days" class="btn secondary">Last 7 Days</button>
