Modified index.html file

--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
       </div>
       <p id="status" class="status">Status: Not Tracking</p>
 
-      <!-- Display Current Uptime Timer (HH:MM:SS) -->
-      <div class="timer">
-        <h3>Current Uptime: <span id="current-uptime">00:00:00</span></h3>
-      </div>
-    </section>
+        </section>
 
     <section class="report-section">
       <h2>Performance Report</h2>
@@ -70,7 +66,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 SLA Tracker. All rights reserved.</p>
+      <p>Project by Samson Tanimawo.</p>
     </footer>
   </div>
 
