Added new files

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <button id="end-btn" class="btn secondary" disabled>End</button> <!-- End button added -->
       </div>
       <p id="status" class="status">Status: Not Tracking</p>
-
-        </section>
+    </section>
 
     <section class="report-section">
       <h2>Performance Report</h2>
@@ -53,7 +52,7 @@
     </section>
 
     <section class="history-section">
-      <h2>Historical Uptime Data</h2>
+      <h2>Historical Uptime Tracking</h2>
       <div class="history-controls">
         <button id="last-24hrs" class="btn secondary">Last 24 Hours</button>
         <button id="last-7days" class="btn secondary">Last 7 Days</button>
@@ -66,7 +65,7 @@
     </section>
 
     <footer>
-      <p>Project by Samson Tanimawo.</p>
+      <p> Project by Samson Tanimawo </p>
     </footer>
   </div>
 
