--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
     </section>
 
     <footer>
-      <p> Project by Samson Tanimawo </p>
-    </footer>
-  </div>
+      <p>Explore my latest full stack project: 
+          <a href="https://www.novacdn.net" target="_blank" class="blue-link">NovaCDN</a>
+      </p>
+  </footer>  
 
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
